fix: adjust gap for type movie in detail page

--- a/src/pages/Movie/Details/Detail.module.scss
+++ b/src/pages/Movie/Details/Detail.module.scss
@@ -169,7 +169,7 @@
     .level-item {
       display: flex;
       flex-wrap: wrap;
-      // gap: 10px 4px;
+      gap: 10px 0px;
       margin-bottom: 12px;
     }
 
